opam-version: "1.2"
name: "nelist"
authors: "Francois BERENGER <ligand@free.fr>"
maintainer: "Francois BERENGER <ligand@free.fr>"
homepage: "https://github.com/UnixJunkie/nelist"
bug-reports: "https://github.com/UnixJunkie/nelist/issues"
dev-repo: "https://github.com/UnixJunkie/nelist.git"
license: "LGPL"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "jbuilder" {build}
]
